# project

./: .coverage  pyproject.toml
claims_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
claims_ml/src/: data_loader.py  error_messages.py
claims_ml/src/data_loader/: data_loader.py  exceptions.py
claims_ml/src/data_preprocessing/: __init__.py  data_preprocessing.py  load_config.py
claims_ml/src/model_training/: README.md  __init__.py  custom_models.py  example_custom_models.md  model_trainer.py
tests/: conftest.py
tests/data_loader/: test_data_loader.py
tests/data_preprocessing/: conftest.py  test_data_preprocessing.py
tests/model_training/: conftest.py  test_model_trainer.py  test_model_trainer_custom_models.py  test_model_trainer_integration.py  test_utils.py
tests/test_datasets/: test.csv  test.parquet
